<resources>
    <string name="app_name">Splittr</string>
    <string name="splittr">Splittr  👋</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="my_list">My Lists</string>
    <string name="lists">Lists</string>
    <string name="shared_list">Shared List</string>
    <string name="create_list">Create List</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="empty_my_list">No My Lists Found</string>
    <string name="empty_shared_list">No Shared Lists Found</string>
    <string name="empty_shared_txt">To join someone \'s list, they have to invite you with your email.</string>

    <string name="list_name">List Name</string>
    <string name="list_description">List Description</string>
    <string name="add_list">Add List</string>
    <string name="new_expense">Add a new expense</string>
    <string name="show_refunds">Show Refunds</string>
    <string name="add_item">Add Item in List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="paid_for_who">Paid for who</string>
    <string name="share_list">Share List</string>

    <string name="delete_confirm">Are you sure you want to delete this list?</string>

</resources>