<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_new_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_bg"
        android:text="@string/create_list"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/myLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_list"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/create_new_list"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myList_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/myLists"/>

    <TextView
        android:id="@+id/sharedLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/myList_rv"
        android:layout_marginTop="30dp"
        android:text="@string/shared_list"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sharedList_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sharedLists"/>
</androidx.constraintlayout.widget.ConstraintLayout>