<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="08dp"
    android:layout_marginEnd="08dp"
    tools:context=".fragments.myListsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_new_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_bg"
        android:text="@string/create_list"
        android:textColor = "?android:textColorPrimary" />

    <TextView
        android:id="@+id/myLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor = "?android:textColorSecondary"
        app:layout_constraintTop_toBottomOf="@+id/create_new_list"
        android:text="@string/my_list"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myList_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/myLists"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/myList_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/empty_my_list"
        android:textColor = "?android:textColorSecondary"
        app:layout_constraintTop_toBottomOf="@+id/myLists"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/green"/>


</androidx.constraintlayout.widget.ConstraintLayout>